clusters/holton-talos-prod/holton-xyz/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: holton-xyz
  namespace: holton-xyz
spec:
  parentRefs:
  - name: holton-xyz-gateway
    namespace: holton-xyz
    sectionName: https
  - name: holton-xyz-gateway
    namespace: holton-xyz
    sectionName: https-www
  hostnames:
  - holton.xyz
  - www.holton.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: holton-xyz
      port: 80
